WebCore:

2008-06-02  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Darin.

        Bug 18066: REGRESSION: createAttribute throws NAMESPACE_ERR exception
        https://bugs.webkit.org/show_bug.cgi?id=18066

        Test: fast/dom/createAttribute-exception.html

        * dom/Document.cpp:
        (WebCore::Document::createAttributeNS):
        * dom/Document.h: Add a bool parameter shouldIgnoreNamespaceChecks
        to createNamespaceNS() used by createAttribute() to bypass namespace
        checking.


LayoutTests:

2008-06-02  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Darin.

        Bug 18066: REGRESSION: createAttribute throws NAMESPACE_ERR exception
        https://bugs.webkit.org/show_bug.cgi?id=18066

        * fast/dom/createAttribute-exception-expected.txt: Added.
        * fast/dom/createAttribute-exception.html: Added.




Canonical link: https://commits.webkit.org/26769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34315 268f45cc-cd09-0410-ab3c-d52691b4dbfc